--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -197,7 +197,7 @@ import Layout from "../layouts/Layout.astro";
 				<div class="flex justify-center items-center h-[100px] w-full p-2">
 					<h2>LA HISTORIA DE <b>METAL FORCE DRILLING COMPANY</b></h2>
 				</div>
-				<div id="historia" class="relative h-[300px] text-white w-full">
+				<div class="relative h-[300px] text-white w-full">
 					<button
 						id="slide_2_left"
 						class="absolute left-0 w-12 h-full bg-opacity-60 bg-slate-600 flex justify-center items-center z-10"
@@ -282,6 +282,113 @@ import Layout from "../layouts/Layout.astro";
 						</div>
 					</div>
 				</div>
+			</div>
+			<div id="servicios" class="relative h-auto bg-neutral-100 z-10 w-full">
+				<div class="flex justify-center items-center h-[100px] w-full p-2">
+					<h2 class="uppercase">Servicios</h2>
+				</div>
+				<div
+					class="p-8 flex flex-col md:flex-row gap-4 flex-wrap justify-center"
+				>
+					<div class="card w-96 bg-base-100 shadow-xl image-full">
+						<figure>
+							<img
+								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+								alt="Shoes"
+							/>
+						</figure>
+						<div class="card-body">
+							<h2 class="card-title">
+								Venta al por mayor de Materiales de Construcción
+							</h2>
+							<p>
+								Ofrecemos una amplia gama de materiales de construcción de alta
+								calidad, desde cemento hasta madera y más, para satisfacer las
+								necesidades de proyectos grandes y pequeños.
+							</p>
+						</div>
+					</div>
+					<div class="card w-96 bg-base-100 shadow-xl image-full">
+						<figure>
+							<img
+								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+								alt="Shoes"
+							/>
+						</figure>
+						<div class="card-body">
+							<h2 class="card-title">
+								Artículos de Ferretería de Calidad Profesional
+							</h2>
+							<p>
+								Suministramos herramientas y equipos de ferretería robustos y
+								confiables para garantizar la eficiencia y la precisión en cada
+								etapa de tu proyecto de construcción.
+							</p>
+						</div>
+					</div>
+					<div class="card w-96 bg-base-100 shadow-xl image-full">
+						<figure>
+							<img
+								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+								alt="Shoes"
+							/>
+						</figure>
+						<div class="card-body">
+							<h2 class="card-title">Equipo y Materiales de Fontanería</h2>
+							<p>
+								Proporcionamos una variedad de equipos y materiales de
+								fontanería de última generación, desde tuberías hasta
+								accesorios, para garantizar sistemas de agua confiables y
+								duraderos.
+							</p>
+						</div>
+					</div>
+					<div class="card w-96 bg-base-100 shadow-xl image-full">
+						<figure>
+							<img
+								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
+								alt="Shoes"
+							/>
+						</figure>
+						<div class="card-body">
+							<h2 class="card-title">
+								Soluciones Personalizadas para Proyectos Específicos
+							</h2>
+							<p>
+								Adaptamos nuestros servicios y productos para satisfacer las
+								demandas específicas de cada proyecto, garantizando resultados
+								óptimos y satisfacción del cliente.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div
+				id="voladura"
+				class="bg-neutral-800 bg-opacity-70 flex flex-col md:flex-row justify-between items-center gap-12 p-2 md:p-20"
+			>
+				<div class="text-white w-full md:w-8/12 flex flex-col gap-8">
+					<h3 class="font-bold text-lg">
+						Control de Calidad y Aseguramiento de la Calidad
+					</h3>
+					<p>
+						Nuestros servicios de QA/QC en voladuras se enfocan en supervisar y
+						garantizar la calidad de cada etapa del proceso de voladura. Desde
+						la selección de los explosivos y el diseño de la carga hasta la
+						ejecución y monitoreo de la voladura, nos comprometemos a cumplir
+						con los estándares más altos de seguridad y eficiencia. Nuestro
+						equipo especializado lleva a cabo inspecciones detalladas, pruebas
+						rigurosas y controles exhaustivos para asegurar que cada detonación
+						se realice de manera precisa, minimizando riesgos y maximizando la
+						efectividad en el trabajo de construcción o minería. Confía en
+						nuestro compromiso con la calidad para lograr resultados confiables
+						y seguros en tus proyectos.
+					</p>
+				</div>
+				<img
+					class="mask mask-decagon w-1/2 md:w-4/12"
+					src="https://daisyui.com/images/stock/photo-1567653418876-5bb0e566e1c2.jpg"
+				/>
 			</div>
 		</section>
 		<footer
