--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,9 @@ import Layout from "../layouts/Layout.astro";
 						<li><a href="#contacto">Contacto</a></li>
 					</ul>
 				</div>
-				<a class="btn btn-ghost text-xl">daisyUI</a>
+				<a class="btn btn-ghost text-xl w-full flex justify-start">
+					<img class="max-h-full w-max" src="./assets/logo_1.png" alt="" />
+				</a>
 			</div>
 			<div class="navbar-center hidden lg:flex">
 				<ul class="menu menu-horizontal px-1 gap-2">
@@ -94,7 +96,7 @@ import Layout from "../layouts/Layout.astro";
 			>
 				<div
 					class="w-full max-w-full h-full max-h-full bg-no-repeat bg-cover bg-center"
-					style="background-image: url('https://picsum.photos/2300/1070')"
+					style="background-image: url(./assets/perforacion-1.jpg)"
 				>
 				</div>
 			</div>
@@ -106,7 +108,7 @@ import Layout from "../layouts/Layout.astro";
 			>
 				<div
 					class="md:w-3/4 w-full md:h-3/4 h-fit max-h-[600px] bg-white relative overflow-hidden bg-cover bg-no-repeat bg-right"
-					style="background-image: url('https://picsum.photos/2300/1070')"
+					style="background-image: url(./assets/perforacion-2.jpg)"
 				>
 					<div
 						id="bgcard"
@@ -290,7 +292,7 @@ import Layout from "../layouts/Layout.astro";
 				<div
 					class="p-8 flex flex-col md:flex-row gap-4 flex-wrap justify-center"
 				>
-					<div class="card w-96 bg-base-100 shadow-xl image-full">
+					<div class="card w-full md:w-96 bg-base-100 shadow-xl image-full">
 						<figure>
 							<img
 								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -308,7 +310,7 @@ import Layout from "../layouts/Layout.astro";
 							</p>
 						</div>
 					</div>
-					<div class="card w-96 bg-base-100 shadow-xl image-full">
+					<div class="card w-full md:w-96 bg-base-100 shadow-xl image-full">
 						<figure>
 							<img
 								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -326,7 +328,7 @@ import Layout from "../layouts/Layout.astro";
 							</p>
 						</div>
 					</div>
-					<div class="card w-96 bg-base-100 shadow-xl image-full">
+					<div class="card w-full md:w-96 bg-base-100 shadow-xl image-full">
 						<figure>
 							<img
 								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -343,7 +345,7 @@ import Layout from "../layouts/Layout.astro";
 							</p>
 						</div>
 					</div>
-					<div class="card w-96 bg-base-100 shadow-xl image-full">
+					<div class="card w-full md:w-96 bg-base-100 shadow-xl image-full">
 						<figure>
 							<img
 								src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg"
@@ -386,8 +388,8 @@ import Layout from "../layouts/Layout.astro";
 					</p>
 				</div>
 				<img
-					class="mask mask-decagon w-1/2 md:w-4/12"
-					src="https://daisyui.com/images/stock/photo-1567653418876-5bb0e566e1c2.jpg"
+					class="mask mask-hexagon w-1/2 md:w-6/12"
+					src="./assets/voladura-1.jpg"
 				/>
 			</div>
 		</section>
@@ -396,18 +398,7 @@ import Layout from "../layouts/Layout.astro";
 			class="footer md:p-10 p-6 bg-neutral text-neutral-content w-full"
 		>
 			<aside class="w-full">
-				<svg
-					width="50"
-					height="50"
-					viewBox="0 0 24 24"
-					xmlns="http://www.w3.org/2000/svg"
-					fill-rule="evenodd"
-					clip-rule="evenodd"
-					class="fill-current"
-					><path
-						d="M22.672 15.226l-2.432.811.841 2.515c.33 1.019-.209 2.127-1.23 2.456-1.15.325-2.148-.321-2.463-1.226l-.84-2.518-5.013 1.677.84 2.517c.391 1.203-.434 2.542-1.831 2.542-.88 0-1.601-.564-1.86-1.314l-.842-2.516-2.431.809c-1.135.328-2.145-.317-2.463-1.229-.329-1.018.211-2.127 1.231-2.456l2.432-.809-1.621-4.823-2.432.808c-1.355.384-2.558-.59-2.558-1.839 0-.817.509-1.582 1.327-1.846l2.433-.809-.842-2.515c-.33-1.02.211-2.129 1.232-2.458 1.02-.329 2.13.209 2.461 1.229l.842 2.515 5.011-1.677-.839-2.517c-.403-1.238.484-2.553 1.843-2.553.819 0 1.585.509 1.85 1.326l.841 2.517 2.431-.81c1.02-.33 2.131.211 2.461 1.229.332 1.018-.21 2.126-1.23 2.456l-2.433.809 1.622 4.823 2.433-.809c1.242-.401 2.557.484 2.557 1.838 0 .819-.51 1.583-1.328 1.847m-8.992-6.428l-5.01 1.675 1.619 4.828 5.011-1.674-1.62-4.829z"
-					></path></svg
-				>
+				<img class="h-[50px]" src="./assets/logo_2.png" alt="Logo footer" />
 				<p>
 					Metal Force Drilling Company SAC<br />Calidad que construye confianza
 				</p>
